--- a/styles/inital.css
+++ b/styles/inital.css
@@ -7,3 +7,26 @@
 body {
   font-family: sans-serif;
 }
+
+h1 {
+  font-size: 10vw;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 5vw;
+  text-transform: uppercase;
+}
+
+h3 {
+  text-transform: capitalize;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
