--- a/styles/products.css
+++ b/styles/products.css
@@ -1,63 +1,16 @@
 /* products sections */
-.products {
-    height: 100vh;
+
+.products .search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.products .title {
-    text-align: center;
-    padding: 5rem 0 3rem 0;
+.product-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem 1rem;
 }
-
-.products .cards {
-    display: flex;
-    overflow-x: scroll;
-}
-@media (min-width: 1100px) {
-    .products .cards {
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-    }
-}
-
-.products .card {
-    width: 300px;
-    height: 400px;
-    margin: 1rem 1.5rem;
-    border-radius: 0.2rem;
-    box-shadow: 2px 2px 4px rgba(50, 50, 50, 0.5);
-    display: flex;
-    flex-direction: column;
-    min-width: 300px;
-}
-
-.products .card .img-box {
-    flex: 1;
-    overflow: hidden;
-    object-fit: cover;
-}
-
-.products .card .content-box {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.products .card .content-box h3 {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.product-footer{
-    display: flex;
-    justify-content: space-around;
-    
-}
-.add-cart{
-    background: rgb(190, 185, 185);
-    padding: 0.25rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
+.add-cart {
 }
