--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,6 +2,8 @@
   --black: #333;
   --white: #fff;
 
+  --icon-hover: rgba(255, 0, 0, 0.8);
+
   --orderItems-background: rgba(51, 51, 51, 0.692);
 
   --base-padding: 0 5vw;
