--- a/styles/header.css
+++ b/styles/header.css
@@ -2,9 +2,9 @@
 header {
   position: relative;
   height: 100vh;
-  background-image: url("../assets/images/header.jpeg");
+  /* background-image: url("../assets/images/header.jpeg");
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,9 +103,66 @@ header .checkout-button {
   margin: 0 1rem;
 }
 
-header .top-content {
-  color: var(--white);
+header .top-content .sphere {
+  position: relative;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  z-index: 10;
+}
+
+header .top-content .sphere::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: inset 0 100px 100px rgba(255, 255, 255, 0.5),
+    inset 0 -100px 100px rgba(0, 0, 0, 1), inset 0 0 100px rgba(0, 0, 0, 1);
+  z-index: 11;
+}
+
+header .top-content .sphere::after {
+  position: absolute;
+  content: "";
+  bottom: -50px;
+  left: -50px;
+  width: 400px;
+  height: 100px;
+  border-radius: 50%;
+  background: radial-gradient(#000, transparent, transparent);
+  z-index: -1;
+}
+@media (max-width: 380px) {
+  header .top-content .sphere::after {
+    width: 300px;
+    background: radial-gradient(rgba(0, 0, 0, 0.5), transparent, transparent);
+  }
+}
+
+header .top-content h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  font-size: 2rem;
   text-align: center;
+  color: var(--white);
+  z-index: 10;
+}
+
+header .top-content .sphere video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  filter: blur(0);
 }
 
 header .toggle {
