--- a/styles/showcase.css
+++ b/styles/showcase.css
@@ -1,8 +1,118 @@
 /* showcase sections */
 .showcase {
-  height: 50vh;
-  background-color: lightgray;
+  position: relative;
+  height: 80vh;
+  background-color: var(--black);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.showcase .box {
+  position: absolute;
+  top: calc(50% -150px);
+  left: calc(50% -150px);
+  width: 200px;
+  height: 200px;
+  transform-style: preserve-3d;
+}
+
+.showcase .box .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transform: rotateX(-20deg) rotateY(25deg) translate3d(-75px, -50px, 150px);
+}
+
+.showcase .box .content span video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.showcase .box .content span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--black);
+}
+
+.showcase .box .content span:nth-child(1) {
+  transform: rotateX(0deg) translate3d(0, 0, 100px);
+}
+.showcase .box .content span:nth-child(1)::before {
+  position: absolute;
+  top: -30px;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.5s linear;
+}
+.showcase .box .content span:hover:nth-child(1)::before {
+  top: 0;
+  opacity: 1;
+}
+.showcase .box .content span:nth-child(1)::after {
+  position: absolute;
+  content: "You can delivery";
+  top: -30px;
+  left: 50%;
+  padding: 0.5rem 1rem;
+  color: var(--black);
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  opacity: 0;
+  transition: all 1s;
+}
+.showcase .box .content span:hover:nth-child(1)::after {
+  top: 50%;
+  opacity: 1;
+}
+
+.showcase .box .content span:nth-child(2) {
+  transform: rotateY(90deg) translate3d(0, 0, -100px);
+}
+
+.showcase .box .content span:nth-child(3) {
+  transform: rotateX(90deg) translate3d(0, 0, 100px);
+}
+
+.showcase .showcase-btn {
+  position: absolute;
+  bottom: 30px;
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--white);
+}
+
+@media (min-width: 600px) {
+  .showcase .box {
+    width: 300px;
+    height: 300px;
+  }
+
+  .showcase .box .content span:nth-child(1) {
+    transform: rotateX(0deg) translate3d(0, 0, 150px);
+  }
+
+  .showcase .box .content span:nth-child(2) {
+    transform: rotateY(90deg) translate3d(0, 0, -150px);
+  }
+
+  .showcase .box .content span:nth-child(3) {
+    transform: rotateX(90deg) translate3d(0, 0, 150px);
+  }
 }
