--- a/styles/inital.css
+++ b/styles/inital.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Alice&family=Fredericka+the+Great&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -16,6 +18,7 @@ h1 {
 h2 {
   font-size: 5vw;
   text-transform: uppercase;
+  font-family: "Fredericka the Great", cursive;
 }
 
 h3 {
